# stm32-hal-library

./: .gitignore  CMakeLists.txt  LICENSE  README.md  extra.cpp  linker.ld  startup.s
Drivers/CMSIS/Device/ST/STM32F4xx/Include/: system_stm32f4xx.h
cmake/stm32cubemx/: CMakeLists.txt
components/: CMakeLists.txt
components/inc/: adc.h  common.h  dma.h  gpio.h  i2c.h  i2s.h  iwdg.h  pwm.h  rtc.h  spi.h  timer.h  uart.h  wwdg.h
components/include/: gpio.h  timer.h  uart.h
components/src/: adc.c  dma.c  gpio.c  i2c.c  i2s.c  iwdg.c  pwm.c  rtc.c  spi.c  syscalls.c  timer.c  uart.c  wdt.c  wwdg.c
main/: main.c  main.cpp
